package business.system;

public class Category {
}
